force-app/src/objects/TR1__ATSFlowSettings__mdt.object
<CustomObject>
    <description>Settings for the ATS component to run custom Visual Flows</description>
    <fields>
        <fullName>TR1__FlowName__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__FlowSettings__c</fullName>
        <description>Static settings for a Flow</description>
        <inlineHelpText>JSON string with settings for a Flow. The example you can find below.
[{
    name : &apos;OpportunityID&apos;,
    type : &apos;String&apos;,
    value : &apos;&lt;Opportunity.Id&gt;&apos;
},{
    name : &apos;AccountID&apos;,
    type : &apos;String&apos;,
    value : &apos;&lt;Opportunity.AccountId&gt;&apos;
}]</inlineHelpText>
        <label>Flow Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__FlowSupportsMultipleSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This parameter is used to define the name of the parameter for subsequent transfer to Flow, namely, if the field is checked, then all selected applicants are used that are transferred to &apos;recordsIds&apos; parameter, otherwise only the first selected from the list is used and transferred to &apos;recordId&apos; parameter</description>
        <inlineHelpText>This parameter is used to define the name of the parameter for subsequent transfer to Flow, namely, if the field is checked, then all selected applicants are used that are transferred to &apos;recordsIds&apos; parameter, otherwise only the first selected from the list is used and transferred to &apos;recordId&apos; parameter</inlineHelpText>
        <label>Flow Supports Multiple Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Provide_Job_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, &apos;jobId&apos; input variable is populated on the flow execution. Make sure the flow contains the variable.</description>
        <inlineHelpText>If checked, &apos;jobId&apos; input variable is populated on the flow execution. Make sure the flow contains the variable.</inlineHelpText>
        <label>Provide Job Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Provide_Source_Job_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, &apos;sourceJobId&apos; input variable is populated on the flow execution. Make sure the flow contains the variable.</description>
        <inlineHelpText>If checked, &apos;sourceJobId&apos; input variable is populated on the flow execution. Make sure the flow contains the variable.</inlineHelpText>
        <label>Provide Source Job Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Provide_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, &apos;source&apos; input variable is populated on the flow execution. Make sure the flow contains the variable.</description>
        <inlineHelpText>If checked, &apos;source&apos; input variable is populated on the flow execution. Make sure the flow contains the variable.</inlineHelpText>
        <label>Provide Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__StageName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Stage Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ATS Flow Settings</label>
    <pluralLabel>ATS Flow Settings</pluralLabel>
</CustomObject>